tests/baselines/reference/exponentiationOperatorWithOnlyNullValueOrUndefinedValue.errors.txt
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithOnlyNullValueOrUndefinedValue.ts(2,10): error TS2531: Object is possibly 'null'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithOnlyNullValueOrUndefinedValue.ts(2,18): error TS2531: Object is possibly 'null'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithOnlyNullValueOrUndefinedValue.ts(3,10): error TS2531: Object is possibly 'null'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithOnlyNullValueOrUndefinedValue.ts(3,18): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithOnlyNullValueOrUndefinedValue.ts(4,10): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithOnlyNullValueOrUndefinedValue.ts(4,23): error TS2531: Object is possibly 'null'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithOnlyNullValueOrUndefinedValue.ts(5,10): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithOnlyNullValueOrUndefinedValue.ts(5,23): error TS2532: Object is possibly 'undefined'.


==== tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithOnlyNullValueOrUndefinedValue.ts (8 errors) ====
    // operator **
    var r1 = null ** null;
             ~~~~
!!! error TS2531: Object is possibly 'null'.
                     ~~~~
!!! error TS2531: Object is possibly 'null'.
    var r2 = null ** undefined;
             ~~~~
!!! error TS2531: Object is possibly 'null'.
                     ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r3 = undefined ** null;
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                          ~~~~
!!! error TS2531: Object is possibly 'null'.
    var r4 = undefined ** undefined;
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                          ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    